--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,79 +1,6 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main
-      - '**'
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  lint:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Use Node.js 18
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run lint
-        run: npm run lint --if-present
-
-  build:
-    name: build
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Use Node.js 18
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build @aurora/common
-        run: npm --workspace @aurora/common run build
-
-      - name: Build workspace
-        run: npm run build
-
-  test:
-    name: test
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Use Node.js 18
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test --if-present
-name: CI
-
-on:
   pull_request:
     branches: [ main ]
   push:
@@ -161,6 +88,11 @@ jobs:
           fi
       - run: npm ci
         if: steps.detect.outputs.has_node == 'true'
+
+      - name: Build @aurora/common first
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
+        run: npm --workspace @aurora/common run build --if-present
+
       - name: Build (root)
         if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'false'
         run: npm run build --if-present
@@ -245,7 +177,6 @@ jobs:
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Test skipped."
 
-  # Smoke job: runs DB-dependent smoke/integration tests against a Postgres service.
   smoke:
     runs-on: ubuntu-latest
     needs: build
@@ -303,9 +234,7 @@ jobs:
           DEBUG: typeorm:*
         run: |
           set -x
-          # Capture stdout/stderr to migration.log and fail loudly with contents on error
           npm run migration:run 2>&1 | tee migration.log || (cat migration.log && exit 1)
-          # Also print the log for successful runs
           cat migration.log || true
       - name: Upload migration log
         if: always()
@@ -321,19 +250,16 @@ jobs:
           DB_PASS: postgres
           DB_NAME: aurora_users
         run: |
-          # If repo root has test/smoke, run it
           if [ -d "test/smoke" ]; then
             echo "Running root smoke tests..."
             npm run test -- test/smoke --runInBand
             exit $?
           fi
 
-          # Otherwise look for packages with test/smoke and run them per-package
           found=0
           for pkg in packages/*; do
             if [ -d "$pkg/test/smoke" ]; then
               echo "Running smoke tests for package: $pkg"
-              # Use npm --prefix to run test in the package directory
               npm --prefix "$pkg" run test -- test/smoke --runInBand || exit 1
               found=1
             fi
