--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,7 @@ jobs:
           DB_USER: postgres
           DB_PASS: postgres
           DB_NAME: aurora_users
-        run: npm --workspace @aurora/auth-service run test -- --testPathPattern=integration --ci
+        run: npm --workspace auth-service run test -- --testPathPattern=integration --ci
       - name: No Node project — test skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Test skipped."
