--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,13 @@ jobs:
           DB_USER: postgres
           DB_PASS: postgres
           DB_NAME: aurora_users
-        run: npm --workspace auth-service run test:integration -- --ci
+        run: |
+          # Create required schemas
+          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d aurora_users -c "CREATE SCHEMA IF NOT EXISTS auth;"
+          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d aurora_users -c "CREATE SCHEMA IF NOT EXISTS users;"
+          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d aurora_users -c "CREATE SCHEMA IF NOT EXISTS events;"
+          # Run integration tests
+          npm --workspace auth-service run test:integration -- --ci
       - name: No Node project — test skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Test skipped."
