--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,19 +175,7 @@ jobs:
         run: npm -ws run test --if-present -- --ci
       - name: Integration tests (auth-service)
         if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
-        env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
-          DB_USER: postgres
-          DB_PASS: postgres
-          DB_NAME: aurora_users
-        run: |
-          # Create required schemas
-          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d aurora_users -c "CREATE SCHEMA IF NOT EXISTS auth;"
-          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d aurora_users -c "CREATE SCHEMA IF NOT EXISTS users;"
-          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d aurora_users -c "CREATE SCHEMA IF NOT EXISTS events;"
-          # Run integration tests
-          npm --workspace auth-service run test:integration -- --ci
+        run: npm --workspace auth-service run test:integration -- --ci
       - name: No Node project — test skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Test skipped."
