--- a/packages/auth-service/package.json
+++ b/packages/auth-service/package.json
@@ -5,45 +5,47 @@
   "description": "Scaffold do auth-service extraído do monolito para fins didáticos",
   "main": "dist/main.js",
   "scripts": {
-  "build": "tsc -p tsconfig.json",
-  "start": "node dist/src/main.js",
-  "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-  "demo": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/src/main.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "demo": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest",
     "test:integration": "jest --config jest.integration.config.ts",
     "contract:test": "jest --testPathPattern=contract"
   },
   "license": "MIT",
   "dependencies": {
-    "yaml": "^2.2.1",
-  "@nestjs/common": "^11.1.9",
-  "@nestjs/core": "^11.1.9",
-  "@nestjs/platform-express": "^11.1.9",
-  "@nestjs/jwt": "^11.0.0",
-  "@nestjs/passport": "^11.0.0",
-  "@nestjs/typeorm": "^11.0.0",
-  "@nestjs/config": "^4.0.2",
-  "@nestjs/swagger": "^11.2.2",
+    "@aurora/common": "file:../common",
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.0",
+    "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/swagger": "^11.2.2",
+    "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-  "typeorm": "^0.3.27",
-  "reflect-metadata": "^0.2.2",
-  "pg": "^8.16.3",
-    "axios": "^1.5.0",
-    "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3",
-    "@aurora/common": "file:../common",
-  "class-validator": "^0.14.2",
-    "class-transformer": "^0.5.1"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27",
+    "yaml": "^2.2.1"
   },
-  
   "devDependencies": {
+    "@testcontainers/postgresql": "^11.9.0",
     "@types/jest": "^29.5.2",
+    "@types/pg": "^8.15.6",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "testcontainers": "^11.9.0",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12"
+    "typescript": "^5.0.0"
   }
 }
