--- a/.github/workflows/build-users-service.yml
+++ b/.github/workflows/build-users-service.yml
@@ -39,7 +39,7 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
       - uses: docker/build-push-action@v6
         with:
-          context: ./packages/users-service
+          context: .
           file: ./packages/users-service/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
