--- a/.github/workflows/build-events-service.yml
+++ b/.github/workflows/build-events-service.yml
@@ -23,6 +23,17 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+
+      # DEBUG: Mostrar o conteúdo do workspace para confirmar que 'packages/' existe
+      - name: Debug - listar repositório
+        run: |
+          echo "PWD: $(pwd)"
+          echo "### root files ###"
+          ls -la
+          echo "### packages dir ###"
+          ls -la packages || true
+          echo "### packages/events-service ###"
+          ls -la packages/events-service || true
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
