--- a/.github/workflows/build-events-service.yml
+++ b/.github/workflows/build-events-service.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           context: .
           file: ./packages/events-service/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
