--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,13 +36,11 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
     depends_on:
       db:
         condition: service_healthy
-    ports:
-      - "3011:3011"
     networks:
       - aurora_network
 
@@ -58,7 +56,7 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
       USERS_API_URL: "http://users-service:3011"
       JWT_ACCESS_SECRET: ${JWT_ACCESS_SECRET}
@@ -67,8 +65,6 @@ services:
         condition: service_healthy
       users-service:
         condition: service_started
-    ports:
-      - "3010:3010"
     networks:
       - aurora_network
 
@@ -84,13 +80,11 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
     depends_on:
       db:
         condition: service_healthy
-    ports:
-      - "3012:3012"
     networks:
       - aurora_network
 
